--- a/project1/Makefile
+++ b/project1/Makefile
@@ -1,8 +1,13 @@
 CC=gcc
-splc:
-	@mkdir bin
-	touch bin/splc
-	@chmod +x bin/splc
+FLEX=flex
+BISON=bison
+	
+.PHONY: clean
+.lex: src/lex.l
+	$(FLEX) src/lex.l
+.syntax: src/syntax.y
+	$(BISON) -t -d -v src/syntax.y
+splc: .lex .syntax
+	$(CC) syntax.tab.c -lfl -ly -o bin/splc
 clean:
-	@rm -rf bin/
-.PHONY: splc
+	@rm -f bin/
