--- a/project1/.gitignore
+++ b/project1/.gitignore
@@ -1,1 +1,19 @@
 /bin/*
+*.out
+*.o
+*.a
+*.swp
+*.so
+*.bak
+*.log
+peda-session-*
+.gdb_history
+lex.yy.c
+syntax.tab.[hc]
+syntax.output
+bin
+!*/test/*.out
+*make-build-*/
+.idea/
+*.pdf
+*.zip
