--- a/project1/Makefile
+++ b/project1/Makefile
@@ -4,10 +4,10 @@ BISON=bison
 	
 .PHONY: clean
 .lex: src/lex.l
-	$(FLEX) src/lex.l
+	$(FLEX) --yylineno src/lex.l
 .syntax: src/syntax.y
 	$(BISON) -t -d -v src/syntax.y
-splc: .lex .syntax
-	$(CC) syntax.tab.c -lfl -ly -o bin/splc
+splc: .lex .syntax src/tnode.c
+	$(CC) syntax.tab.c src/tnode.c -lfl -ly -o bin/splc
 clean:
 	@rm -f bin/
